website/websites/u64/code/knucleotide.4.scala.log

Wed, 19 Mar 2014 04:34:02 GMT

MAKE:
mv knucleotide.scala-4.scala knucleotide.scala
/usr/local/src/scala-2.10.3/bin/scalac -optimise -target:jvm-1.7 knucleotide.scala
knucleotide.scala:109: error: wrong number of type arguments for scala.collection.mutable.HashTable, should be 2
class HashBag extends HashTable[String] {
                      ^
knucleotide.scala:119: error: not found: value entries
  def elements = entries
                 ^
knucleotide.scala:122: error: not found: value table
    var bucket = table(index(elemHashCode(key))).asInstanceOf[Entry]
                 ^
knucleotide.scala:124: error: not found: value elemEquals
      if (elemEquals(entryKey(bucket),key)) return bucket
          ^
knucleotide.scala:128: error: not found: value addEntry
    addEntry(bucket)
    ^
5 errors found
make: [knucleotide.scala-4.scala_run] Error 1 (ignored)
2.87s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx3G /usr/local/src/jdk1.8.0/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.3/lib/scala-library.jar:/usr/local/src/scala-2.10.3/lib/akka-actors.jar:/usr/local/src/scala-2.10.3/lib/typesafe-config.jar knucleotide 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class knucleotide
